# ClipGen

./: .gitignore  README.MD
clipgen-inference/: .gitignore  README.md  help  main.py  pyproject.toml  setup.py
clipgen-inference/deploy/: Chart.yaml  values.yaml
clipgen-inference/deploy/templates/: _helpers.tpl  deployment.yaml  keda-auth.yaml  keda-scaledobject.yaml  persistent-volume.yaml
clipgen-inference/docker/: Dockerfile
clipgen-inference/src/clipgen/: __init__.py  _k8_test.py  coordinator.py  inference_engine.py  main.py  mochi.py  mochi_model.py  model_interface.py  monitoring.py  sharding.py  test.py  util.py
clipgen-inference/src/genmo/mochi/: patches.py  pipelines.py
clipgen-inference/src/genmo/mochi/dit/: asymm_models_joint.py  layers.py
clipgen-inference/src/genmo/mochi/kernels/: __init__.py  ops.py  test_kernel.py
clipgen-inference/src/genmo/mochi/lib/: utils.py
clipgen-inference/src/genmo/mochi/patch/: dit.py  encoder.py  pipeline.py  triton_pack.py  vae.py
clipgen-inference/src/genmo/mochi/util/: utils.py
clipgen-inference/src/genmo/mochi/vae/: cp_conv.py  models.py
clipgen-inference/src/genmo/mochi_preview/: pipelines.py
clipgen-inference/src/mochi/: pipelines.py
clipgen-inference/src/mochi/dit/: asymm_models_joint.py  residual_tanh_gated_rmsnorm.py
clipgen-inference/src/mochi/kernels/: README.md  __init__.py  ops.py
clipgen-inference/src/mochi/kernels/_C/: __init__.py
clipgen-inference/src/mochi/kernels/cuda/: fused_rmsnorm.cu
clipgen-inference/src/mochi/lib/: progress.py
clipgen-inference/src/mochi/patches/: __init__.py  encoder.py  pipeline.py  vae.py
clipgen-inference/src/mochi/vae/: cp_conv.py  models.py  vae_stats.py
(+99 files in other folders)
