[build-system]
requires = [
    "setuptools>=75.2.0",
    "wheel",
    "torch",
    "pybind11"
]
build-backend = "setuptools.build_meta"

[project]
name = "clipgen-inference"
version = "0.1.0"
description = "Deployment code for Mochi-1 on VoltagePark's managed Kubernetes"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    # Mochi inference dependencies
    "av==13.1.0",
    "einops>=0.8.0",
    "ray>=2.37.0",
    "sentencepiece>=0.2.0",
    "setuptools>=75.2.0",
    "torch>=2.4.1",
    "transformers>=4.45.2",
    "imageio[ffmpeg]>=2.37.0",
    # Container dependencies
    "huggingface-hub~=0.30",
    "hf-transfer>=0.1.9",
    "aioboto3>=15.0.0",
    "botocore>=1.29.0",
    "prometheus-client>=0.16.0",
]

[project.optional-dependencies]
flash = [
    "flash-attn>=2.6.3"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"